improve candidate sample upload
